--- a/server/package.json
+++ b/server/package.json
@@ -5,28 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx --env-file=.env --watch  index.ts"
+    "dev": "npx ts-node  -r dotenv/config src/index.ts ",
+    "start": "node --env-file=.env build/src/index.js",
+    "build": "tsoa spec-and-routes && tsc && tsc-alias",
+    "dev-start": "nodemon -r dotenv/config --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec ts-node src/index.ts"
   },
   "keywords": [
     "kyc",
     "moongoose",
     "server"
   ],
-  "type": "module",
+  "type": "commonjs",
   "author": "Ramkumar",
   "license": "ISC",
   "dependencies": {
-    "@decorators/express": "^3.0.0",
-    "body-parser": "^1.20.3",
+    "body-parser": "^1.19.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7",
-    "typescript-swagger": "^0.1.2"
+    "swagger-ui-express": "^4.1.6",
+    "ts-node": "^10.9.2",
+    "tsoa": "^5.1.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0",
-    "nodeman": "^1.1.2",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.9.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.7",
+    "tsc-alias": "^1.8.10",
+    "typescript": "5.5"
   }
 }
