--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,19 +1,15 @@
-{
+{ 
   "compilerOptions": {
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "target": "ES5",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
+    "target": "ES6",
     "module": "commonjs",
+    "outDir": "build",
+    
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+ 
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
